# catos

./: 2  Cargo.toml  README.md  build.rs  index.html  limine.conf  linker.ld  load.js  module.js  out.js
.cargo/: config.toml
doom/: hello.c
doom/shim/: assert.h  ctype.h  errno.h  fcntl.h  glue.c  inttypes.h  limits.h  math.h  stdio.c  stdio.h  stdlib.h  string.h  strings.h  unistd.h
doom/shim/sys/: stat.h  types.h
doom/src/: d_main.c
initrd/: readme.txt
scripts/: qemu.sh
src/: main.rs  shell.rs
src/doom/: c.rs  mod.rs
src/drivers/: console.rs  fb.rs  io.rs  mod.rs  pic.rs  pit.rs  serial.rs
src/lib/: doom.rs  fbtest.rs  font.rs  fs.rs  gdt.rs  idt.rs  initrd.rs  interrupts.rs  keys.rs  memory.rs  mod.rs  rawkeys.rs  sse.rs  tasks.rs
