[package]
name = "catos"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "catos"
test = false
bench = false

[dependencies]
limine = "0.5.0"
spin = "0.12.1"
x86_64 = "0.15.4"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]
